[gd_scene load_steps=3 format=3 uid="uid://0jvgpkkn3sb4"]

[ext_resource type="Script" path="res://game/scripts/online_mode_screen.gd" id="1_kawv4"]
[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_rbyw8"]

[node name="OnlineModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rbyw8")
script = ExtResource("1_kawv4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.5
offset_top = -60.5
offset_right = 289.5
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="EventModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "WORLDWIDE EVENT MODE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QuickMatchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "QUICK MATCH
"

[node name="RankedMatchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RANKED MATCH
"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerMatchButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "PLAYER MATCH"

[node name="LeaderboardsButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LEADERBOARDS"

[connection signal="pressed" from="VBoxContainer/EventModeButton" to="." method="_on_event_mode_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuickMatchButton" to="." method="_on_quick_match_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RankedMatchButton" to="." method="_on_ranked_match_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PlayerMatchButton" to="." method="_on_player_match_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LeaderboardsButton" to="." method="_on_leaderboards_button_pressed"]
